[package]
name = "cubulous_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "graphics/renderlib",
]

[dependencies]
renderlib = { path = "graphics/renderlib" }
ash = { path = "../ash/ash", default-features = false, features = ["loaded", "debug"] }
ash-window = { path = "../ash/ash-window" }
cgmath = "0.18.0"
winit = "0.28.2"

[[example]]
name = "raster_tutorial"
path = "examples/raster_renderer.rs"

[[example]]
name = "rt_tutorial"
path = "examples/rt_renderer.rs"

