[package]
name = "cubulous_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "graphics/renderlib",
    "graphics/rt_renderer"
]

[dependencies]
ash = { path = "../ash/ash", default-features = false, features = ["loaded", "debug"] }
ash-window = { path = "../ash/ash-window" }
renderlib = { path = "graphics/renderlib" }
rt_renderer = { path= "graphics/rt_renderer" }
cgmath = "0.18.0"
winit = "0.28.2"

[[example]]
name = "raster_tutorial"
path = "examples/raster_renderer.rs"

[[example]]
name = "rt_tutorial"
path = "examples/rt_renderer.rs"

