[package]
name = "renderlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { path = "../../../ash/ash", default-features = false, features = ["loaded", "debug"] }
ash-window = { path = "../../../ash/ash-window" }
cgmath = "0.18.0"
image = "0.24.5"
memoffset = "0.8.0"
num = "0.4.0"
png = "0.17.6"
raw-window-handle = "0.5"
tobj = "3.2.3"
winit = "0.28.2"