[package]
name = "rt_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { path = "../../../ash/ash", default-features = false, features = ["loaded", "debug"] }
ash-window = { path = "../../../ash/ash-window" }
cgmath = "0.18.0"
winit = "0.28.2"
renderlib = { path = "../renderlib" }